117
-- added --stdin-rules
-- added #begin / #end comments for rules
-- changed PAF_Status to StreamSplitter::Status
-- removed target reader current host/app
-- fixed error / warning line number issue
-- changed --conf-error-out to --pedantic
-- more FIXIT-H fixed
-- removed process.plugin_path and process.script_path since they are
   needed ahead of parsing
-- added idle processing, though still as sketchy as Snort until alpha 2
-- pulled latest from Josh - snort2lua tweaks and ... hidden symbols, yay!;
-- made ips_dsize static only and changed RangeCheck to SO_PUBLIC so we can
   use just one copy

116
-- fixed valgrind leak
-- observed memory corruption on Linux when loading dynamic plugins
   (not fixed)
-- fixed action leak
-- testing visibility=hidden
-- more FIXITs
-- fp related FIXITs
-- deleted profile.rules.file and profile.modules.file
-- deleted alerts.alert_file
-- changed --help to just cmd line options and added --help!
-- fixed Xcode warnings
-- fixed sflsq cursor
-- additional cleanup
-- fixed --max-threads configuration
-- fixed PKT_RESIZED bits
-- pulled the latest from Josh

115
-- remove share.h
-- misc FIXITs
-- refactored cmd line parsing and moved options to SnortModule
-- prioritized all FIXITs; FIXIT-J are for josh to reprioritize
-- got latest from Josh

114
-- more FIXIT cleanup
-- fixed flush bucket dumping
-- fixed cmake ips_replace.h
-- refactored script support
-- added lua logger support
-- added extra lualert (alert.lua) to demo lua loggers
-- updated snort.lua
-- pulled in Tom's latest as of 08/20-11:45

113
-- initial FlushBucket implementation
-- converted ips_resp and ips_react to actions
-- implemented byte code parser to replace bad juju in ips_content and
   ips_replace
-- stream workarounds for new packet / protocol foo and shutdown sequencing
-- fixed end of rule parsing to not require ; and recognize incomplete rules
-- fixed executing a command while paused
-- added act_replace
-- eliminated generators.h