@@ -161,7 +161,10 @@ public:
 
     void set_ttl(Packet*, bool client);
 
-    bool was_blocked()
+    void block()
+    { s5_state.session_flags |= SSNFLAG_BLOCK; };
+
+    bool was_blocked() const
     { return (s5_state.session_flags & SSNFLAG_BLOCK) != 0; };
 
     void set_client(Inspector* ins)
