@@ -27,7 +27,13 @@
 #include "framework/module.h"
 #include "main/thread.h"
 
-extern THREAD_LOCAL SimpleStats bstats;
+struct BindStats
+{
+    PegCount packets;
+    PegCount verdicts[3];
+};
+
+extern THREAD_LOCAL BindStats bstats;
 extern THREAD_LOCAL ProfileStats bindPerfStats;
 struct Binding;
 
